# justwatch-spider

./: .gitignore  :w  flake.nix  hindi_list.csv  hot_list.csv  list_query.graphql  pyproject.toml  scrape_spider.csv  scrapy.cfg  sorting_spider.csv  todo.txt  utils.py
analysis/: compute_lists.py  countries.sql  directors.sql  fetch_sql.py  genres.sql  main.py  next_watch.py  tmp.py  year.sql
analysis/output/: average_rank.txt  combined_ranks_unweighted.txt  combined_ranks_weighted.txt  international_average_rank.txt  international_combined_ranks_unweighted.txt  international_combined_ranks_weighted.txt
analysis/output/international/: average_rank.txt  combined_ranks_unweighted.txt  combined_ranks_weighted.txt
analysis/sql/: all3.sql  casts.sql  countries.sql  directors.sql  non_us_indian.sql  tmp.sql  year.sql
justwatch_spider/: items.py  middlewares.py  pipelines.py  settings.py
justwatch_spider/spiders/: hindi_list.py  hot_list.py  scrape_spider.py  sorting_spider.py
