[tool.poetry]
name = "justwatch-spider"
version = "0.1.0"
description = ""
authors = ["Rohit <RohitSinghEmail@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
psycopg2-binary = "^2.9.10"
pycountry = "^24.6.1"
psycopg = "^3.2.3"
numpy = "^2.1.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
